--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -31,7 +31,7 @@
 <body>
 
     <div class="jumbotron">
-        <h1 class="text-center text-white">Welcome to Sensor Visualization </h1>
+        <h1 class="text-center text-white">Anteater Sleep Awareness</h1>
     </div>
     <br>
     <br>
