--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -142,15 +142,20 @@
                 var seriesHumidity = chartHumidity.series[0],
                     shiftHumidity = seriesTemperature.data.length > 20;
 
-                // Humidity
+                // Light
                 var seriesLightness = chartLightness.series[0],
                     shiftLightness = seriesLightness.data.length > 20;
-
+                
+                // Noise frequency
                 var seriesNoise = chartNoiseFreq.series[0],
                     shiftNoise = seriesNoise.data.length > 20;
 
+                // Average Noise frequency
+                var seriesAvgNoise = chartNoiseFreq.series[1],
+                    shiftAvgNoise = seriesAvgNoise.data.length > 20;
+
                 // Add the Point
-                // Time Temperature\
+                // Time Temperature
                 var data1 = [];
                 data1.push(result[0]);
                 data1.push(result[1]);
@@ -170,11 +175,23 @@
                 data4.push(result[0]);
                 data4.push(result[4]);
 
+                // Time MotionFreq
+                var data5 = [];
+                data5.push(result[0]);
+                data4.push(result[5]);
 
+                // Time NoiseFreqAvg
+                var data6 = [];
+                data6.push(result[0]);
+                data6.push(result[6]);
+
+                
                 chartTemperatue.series[0].addPoint(data1, true, shiftTemperature);
                 chartHumidity.series[0].addPoint(data2, true, shiftHumidity);
                 chartLightness.series[0].addPoint(data3, true, shiftLightness);
                 chartNoiseFreq.series[0].addPoint(data4, true, shiftNoise);
+                chartNoiseFreq.series[1].addPoint(data6, true, shiftAvgNoise);
+
                 $(".sensor1").text("");
                 $(".sensor1").text("Temperature : " +  Math.round(data1[1]) );
 
@@ -182,7 +199,7 @@
                 $(".sensor2").text("Humidity : " +  Math.round(data2[1]) );
 
                 $(".sensor3").text("");
-                $(".sensor3").text("Lightness : " +  Math.round(data3[1]) );
+                $(".sensor3").text("Light : " +  Math.round(data3[1]) );
 
                 $(".sensor4").text("");
                 $(".sensor4").text("Noise Frequency : " +  Math.round(data4[1]) );
@@ -223,7 +240,7 @@
                          },
                 series: [{
                     color : '#c23d23',
-                    lineColor: '#303030',
+                    lineColor: '#c23d23',
                     name: 'Temperature',
                     data: []
                 }]
@@ -258,7 +275,8 @@
                     }
                 },
                 series: [{
-                    lineColor: '#1d82b8',
+                    color: '#303030',
+                    lineColor: '#303030',
                     name: 'Humidity',
                     data: []
                 }]
@@ -276,7 +294,7 @@
                     },
                 title:
                     {
-                    text: 'Lightness'
+                    text: 'Light'
                     },
                 xAxis: {
                     type: 'datetime',
@@ -293,8 +311,8 @@
                          },
                 series: [{
                     color : '#c23d23',
-                    lineColor: '#303030',
-                    name: 'Lightness',
+                    lineColor: '#c23d23',
+                    name: 'Light',
                     data: []
                 }]
             });
@@ -327,10 +345,16 @@
                     }
                 },
                 series: [{
-                    lineColor: '#1d82b8',
-                    name: 'Noise Appearance',
+                    color: '#303030',
+                    lineColor: '#303030',
+                    name: 'Noise Occurences',
                     data: []
-                }]
+                },{
+                    color: '#3399FF',
+                    lineColor: '#3399FF',
+                    name: 'Average Noise Occurences',
+                    data: [], 
+                }],
             });
 
             requestData(); // Call requestData() once after the charts are initialized
