--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,8 +2,13 @@
 <html  lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Anteater Sleep Awareness </title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="./style.css">
 
     <!-- Bootstraps Java Scipts Links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -26,12 +31,63 @@
 
 
 </head>
-
 <body>
 
+
+
+    
     <div class="jumbotron">
         <h1 class="text-center text-white">Anteater Sleep Awareness</h1>
     </div>
+
+    <br>
+    <div class="container">
+        <div id="app">
+            <section>
+                <h2>Your Sleep Quality Tracker</h2>
+                <!-- <canvas id="chart"></canvas> -->
+            </section>
+
+            <section>
+                <div clas="rounded-card" id="info">
+                    <h3>Your latest sleep quality</h3>
+                    <div>
+                        <span>
+                            <span class="material-symbols-outlined">
+                                calendar_month
+                            </span>
+                            <span id="latest-day">
+                                2023-06-11
+                            </span>
+                        </span>
+                        <span>
+                            <span class="material-symbols-outlined">
+                                sleep
+                            </span>
+                            <span id="latest-sleep-quality">
+                                100
+                            </span>
+                        </span>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <!-- <h2></h2> -->
+                <div class="rounded-card" id="actions">
+                    <span>
+                        By logging in your sleep quality daily, you can track 
+                        your progress and stay on top of your sleep quality goals!
+                    </span>
+                    <div>
+                        <span id="btn">
+                            Log Sleep Quality
+                        </span>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    
     <br>
     <br>
 
@@ -90,9 +146,9 @@
             </div>
         </div>
     </div>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
 
     <div class="container-fluid">
         <div class="row">
@@ -101,9 +157,9 @@
             </div>
         </div>
     </div>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
 
     <div class="container-fluid">
         <div class="row">
@@ -112,9 +168,9 @@
             </div>
         </div>
     </div>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
 
     <div class="container-fluid">
         <div class="row">
@@ -123,9 +179,9 @@
             </div>
         </div>
     </div>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
 
     <div class="container-fluid">
         <div class="row">
@@ -521,6 +577,7 @@
     obj.backgroundImage();
     obj.centerTitle();
     </script>
+    <script src = "../script.js"></script>
 </body>
 
 
